--- a/NASA APIs/Storyboards/Base.lproj/Main.storyboard
+++ b/NASA APIs/Storyboards/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="SdE-wV-psh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="retina6_72" orientation="portrait" appearance="dark"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -41,9 +41,6 @@
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This project is hosted on github in order to help novice developers get used to the Swift programming language" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="dyB-FY-ZT8">
                                         <rect key="frame" x="5" y="19.666666666666686" width="340" height="61"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="340" id="vKb-Og-PCX"/>
-                                        </constraints>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="17"/>
                                         <color key="textColor" red="0.92163833149999996" green="0.92163833149999996" blue="0.92163833149999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <nil key="highlightedColor"/>
@@ -100,7 +97,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-124" y="84"/>
+            <point key="canvasLocation" x="74" y="84"/>
         </scene>
         <!--Dislocation View Controller-->
         <scene sceneID="rU4-9A-rJx">
@@ -135,7 +132,7 @@
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Earth" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CM6-LF-J3F">
-                                        <rect key="frame" x="185" y="95" width="44.666666666666657" height="24"/>
+                                        <rect key="frame" x="140" y="95" width="44.666666666666657" height="24"/>
                                         <fontDescription key="fontDescription" type="system" weight="thin" pointSize="20"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
@@ -151,7 +148,7 @@
                                     <constraint firstItem="Xgy-2Z-7iG" firstAttribute="centerX" secondItem="9h9-QK-aaI" secondAttribute="centerX" id="hl9-fn-RD5"/>
                                     <constraint firstItem="Xgy-2Z-7iG" firstAttribute="centerY" secondItem="9h9-QK-aaI" secondAttribute="centerY" id="jmZ-HB-Uoz"/>
                                     <constraint firstAttribute="width" constant="150" id="vFY-d3-fct"/>
-                                    <constraint firstItem="CM6-LF-J3F" firstAttribute="leading" secondItem="9h9-QK-aaI" secondAttribute="leading" constant="185" id="xSy-wU-sjE"/>
+                                    <constraint firstItem="CM6-LF-J3F" firstAttribute="leading" secondItem="9h9-QK-aaI" secondAttribute="leading" constant="140" id="xSy-wU-sjE"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HdD-ED-R0f" userLabel="Sun">
@@ -423,18 +420,13 @@
                         <outlet property="sun" destination="MJe-iQ-MKt" id="49a-b8-SzT"/>
                         <outlet property="sunLabel" destination="rr3-Pq-Xkw" id="jMC-br-Twj"/>
                         <outlet property="sunViewOutlet" destination="HdD-ED-R0f" id="fhl-Ci-pE6"/>
-                        <segue destination="xEg-Na-mAC" kind="show" identifier="marsID" id="frm-8T-l2Q"/>
-                        <segue destination="e28-GU-1ph" kind="show" identifier="moonID" id="K2G-aV-LlK"/>
-                        <segue destination="oyh-p0-jfa" kind="show" id="iTv-Id-rzl"/>
-                        <segue destination="uCN-Jp-yZ3" kind="show" id="dRR-OB-xFG"/>
-                        <segue destination="KnW-QO-5Aq" kind="show" id="3xh-Mh-hoL"/>
-                        <segue destination="2bG-mt-Y59" kind="show" id="2SE-0J-iaG"/>
-                        <segue destination="dn0-Co-QzZ" kind="show" id="8ey-qM-c7b"/>
+                        <segue destination="e28-GU-1ph" kind="show" identifier="id" id="K2G-aV-LlK"/>
+                        <segue destination="oyh-p0-jfa" kind="show" identifier="observatory" id="iTv-Id-rzl"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="L9P-9z-EXF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1620" y="83.208395802098963"/>
+            <point key="canvasLocation" x="1725" y="84"/>
         </scene>
         <!--Observatory View Controller-->
         <scene sceneID="p1V-7C-kje">
@@ -462,7 +454,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="R2Y-6I-OFO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2613.4883720930234" y="83.690987124463518"/>
+            <point key="canvasLocation" x="2604" y="-274"/>
         </scene>
         <!--Settings View Controller-->
         <scene sceneID="gt5-3O-gUL">
@@ -599,12 +591,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="zqV-rq-H6C" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1618.840579710145" y="-1339.2857142857142"/>
+            <point key="canvasLocation" x="3345" y="397"/>
         </scene>
-        <!--Moon View Controller-->
+        <!--Content View Controller-->
         <scene sceneID="EcU-KM-whW">
             <objects>
-                <viewController storyboardIdentifier="MoonViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="e28-GU-1ph" customClass="MoonViewController" customModule="NASA_APIs" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ContentViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="e28-GU-1ph" customClass="ContentViewController" customModule="NASA_APIs" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="bt5-zo-oMo">
                         <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -649,39 +641,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rmc-XA-A6I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3068" y="-625"/>
-        </scene>
-        <!--Mars View Controller-->
-        <scene sceneID="klC-Eu-j0U">
-            <objects>
-                <viewController storyboardIdentifier="MarsViewController" modalTransitionStyle="crossDissolve" modalPresentationStyle="overFullScreen" id="xEg-Na-mAC" customClass="MarsViewController" customModule="NASA_APIs" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="eeC-RS-60D">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="2SE-Zk-mU2"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="GeH-uG-Rxa"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="8OR-ys-aEi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="3780" y="-625"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="eSs-xf-qFv">
-            <objects>
-                <viewController id="dn0-Co-QzZ" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="gLv-AN-YwH">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="yUo-OM-9WR"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="K3R-fg-ej6"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="YD2-YZ-REm" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="4499" y="-625"/>
+            <point key="canvasLocation" x="2604" y="397"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="lQX-72-TCk">
@@ -703,55 +663,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kCt-sI-4dt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="638" y="84"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="PQk-bs-AZm">
-            <objects>
-                <viewController id="KnW-QO-5Aq" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="gTa-VM-MTY">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="So6-Yg-j9Q"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="a9W-aA-tEj"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2Se-6V-Hnj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1620" y="-625"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="gme-0Z-cNz">
-            <objects>
-                <viewController id="2bG-mt-Y59" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="0y2-23-W6r">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="KQm-JA-IMu"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="wOo-c0-ddO"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="eSm-3J-DUI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2343" y="-625"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="CfS-32-GXt">
-            <objects>
-                <viewController id="uCN-Jp-yZ3" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ldR-Fa-IRb">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="863"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="w2W-CT-3Cm"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="7h2-D9-BqT"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="PJI-fG-zcJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="903" y="-625"/>
+            <point key="canvasLocation" x="917" y="84"/>
         </scene>
     </scenes>
     <resources>
